--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="skill-row">
         <img class="skill-2" src="https://media3.giphy.com/media/gjO7nSilZIfPcvcw4Z/giphy.gif?cid=790b7611st78i5tqv5jwous6ovmdfs4qhhlq19i0hdlnsejr&rid=giphy.gif" alt="gif">
         <h3>Video Games</h3>
-        <p id="para-2">I am absolutely bonkers about video games. I would buy every game isntead of downloading them illegaly if I could afford them.</p>
+        <p id="para-2">I am absolutely bonkers about video games. I would buy every game instead of downloading them illegaly if I could afford them.</p>
       </div>
     </div>
     <hr>
